--- a/nacos-docker/env/mysql.env
+++ b/nacos-docker/env/mysql.env
@@ -1,5 +1,5 @@
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=nacos_devtest
-MYSQL_USER=wj
-MYSQL_PASSWORD=198237
+MYSQL_USER=nacos
+MYSQL_PASSWORD=nacos
 LANG=C.UTF-8
